--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,25 +3,224 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
+  --foreground-rgb: #f2f2f2;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --navbar-color: #fff;
+  --secondary-color: #ab957d;
+  --tertiary-color: #444cf7;
+  --secondarybutton-color: #5f67f4;
+  --buttonhover-color: #2630f5;
+  --text-rgb: 20, 20, 20;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+}
+
+#miniCircle {
+  transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
+  width: 20px;
+  height: 20px;
+  background-color: #000000;
+  border-radius: 50%;
+  z-index: 99999;
+  position: absolute;
+}
+
+/* .ts-bg {
+  background: rgba(246, 246, 246, 0.36);
+  mix-blend-mode: luminosity;
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+  backdrop-filter: blur(67.95704650878906px);
+} */
+.ts-bg {
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+.ts-bg2 {
+  background: rgba(255, 255, 255, 0.7);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.magicpattern {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: repeat;
+  background-image: url("data:image/svg+xml;utf8,%3Csvg height=%22auto%22 viewBox=%220 0 2000 1400%22 xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath d=%22M0 1386.493c21-6.995 63-14.478 105-34.975 42-20.498 63-37.814 105-67.514 42-29.7 63-53.634 105-80.985s63-26.648 105-55.77c42-29.122 63-95.556 105-89.84 42 5.718 63 113.202 105 118.425 42 5.222 63-70.457 105-92.312 42-21.854 63 23.546 105-16.96 42-40.504 63-128.267 105-185.564s63-113.998 105-100.92c42 13.08 63 216.126 105 166.312 42-49.814 63-405.79 105-415.38 42-9.59 63 332.087 105 367.426 42 35.34 63-145.155 105-190.732 42-45.578 63 7.094 105-37.155 42-44.248 63-183.101 105-184.087 42-.987 63 234.532 105 179.156 42-55.375 63-368.904 105-456.032 42-87.129 84 16.312 105 20.39L2000 1400H0Z%22 fill=%22%23444cf71a%22%2F%3E%3Cpath d=%22M0 1386.493c21-6.995 63-14.478 105-34.975 42-20.498 63-37.814 105-67.514 42-29.7 63-53.634 105-80.985s63-26.648 105-55.77c42-29.122 63-95.556 105-89.84 42 5.718 63 113.202 105 118.425 42 5.222 63-70.457 105-92.312 42-21.854 63 23.546 105-16.96 42-40.504 63-128.267 105-185.564s63-113.998 105-100.92c42 13.08 63 216.126 105 166.312 42-49.814 63-405.79 105-415.38 42-9.59 63 332.087 105 367.426 42 35.34 63-145.155 105-190.732 42-45.578 63 7.094 105-37.155 42-44.248 63-183.101 105-184.087 42-.987 63 234.532 105 179.156 42-55.375 63-368.904 105-456.032 42-87.129 84 16.312 105 20.39%22 fill=%22none%22 stroke=%22%23444cf7%22 stroke-width=%222%22%2F%3E%3Cg fill=%22%23444cf7%22%3E%3Ccircle cy=%221386.493%22 r=%226%22%2F%3E%3Ccircle cx=%22105%22 cy=%221351.518%22 r=%226%22%2F%3E%3Ccircle cx=%22210%22 cy=%221284.004%22 r=%226%22%2F%3E%3Ccircle cx=%22315%22 cy=%221203.019%22 r=%226%22%2F%3E%3Ccircle cx=%22420%22 cy=%221147.249%22 r=%226%22%2F%3E%3Ccircle cx=%22525%22 cy=%221057.41%22 r=%226%22%2F%3E%3Ccircle cx=%22630%22 cy=%221175.834%22 r=%226%22%2F%3E%3Ccircle cx=%22735%22 cy=%221083.522%22 r=%226%22%2F%3E%3Ccircle cx=%22840%22 cy=%221066.563%22 r=%226%22%2F%3E%3Ccircle cx=%22945%22 cy=%22880.998%22 r=%226%22%2F%3E%3Ccircle cx=%221050%22 cy=%22780.079%22 r=%226%22%2F%3E%3Ccircle cx=%221155%22 cy=%22946.39%22 r=%226%22%2F%3E%3Ccircle cx=%221260%22 cy=%22531.01%22 r=%226%22%2F%3E%3Ccircle cx=%221365%22 cy=%22898.436%22 r=%226%22%2F%3E%3Ccircle cx=%221470%22 cy=%22707.704%22 r=%226%22%2F%3E%3Ccircle cx=%221575%22 cy=%22670.549%22 r=%226%22%2F%3E%3Ccircle cx=%221680%22 cy=%22486.462%22 r=%226%22%2F%3E%3Ccircle cx=%221785%22 cy=%22665.618%22 r=%226%22%2F%3E%3Ccircle cx=%221890%22 cy=%22209.586%22 r=%226%22%2F%3E%3Ccircle cx=%221995%22 cy=%22229.976%22 r=%226%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E");
+}
+.magicpattern2 {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: repeat;
+  background-image: url("data:image/svg+xml;utf8,%3Csvg width=%222000%22 height=%221400%22 xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath fill=%22%23ecedfe%22 d=%22M0 0h2000v1400H0z%22%2F%3E%3Cpath d=%22M0 155h0c106.202-8.887 212.403-17.774 321-17 108.597.774 219.59 11.209 330 10 110.41-1.209 220.24-14.061 336-9 115.76 5.061 237.451 28.037 343 32 105.549 3.963 194.955-11.087 321-17 126.045-5.913 288.727-2.69 353-1 64.273 1.69 30.136 1.845 36 2%22 fill=%22none%22 stroke=%22%23a5a9fb%22 stroke-width=%224%22 stroke-linecap=%22round%22%2F%3E%3Cpath d=%22M0 311h0c113.202 8.675 226.404 17.35 338 19 111.596 1.65 221.587-3.723 330-14 108.413-10.277 215.249-25.458 324-28 108.751-2.542 219.418 7.556 323 9s200.08-5.765 333-9c132.92-3.235 302.263-2.496 367 2 64.737 4.496 24.869 12.748 25 21%22 fill=%22none%22 stroke=%22%23777df9%22 stroke-width=%224%22 stroke-linecap=%22round%22%2F%3E%3Cpath d=%22M0 466h0c114.714-5.825 229.428-11.65 342-6s223.001 22.774 332 29c108.999 6.226 216.566 1.555 321-3s205.735-8.994 315-17c109.265-8.006 226.494-19.578 354-20 127.506-.422 265.287 10.308 323 15 57.713 4.692 35.356 3.346 53 2%22 fill=%22none%22 stroke=%22%23cacdfc%22 stroke-width=%224%22 stroke-linecap=%22round%22%2F%3E%3Cpath d=%22M0 622h0c102.658-5.936 205.317-11.872 315-13 109.683-1.128 226.391 2.553 347 5 120.609 2.447 245.119 3.661 351 1s193.133-9.198 300-4c106.867 5.198 233.349 22.13 370 19 136.651-3.13 283.472-26.323 338-31 54.528-4.677 16.764 9.161 19 23%22 fill=%22none%22 stroke=%22%23a3a7fb%22 stroke-width=%224%22 stroke-linecap=%22round%22%2F%3E%3Cpath d=%22M0 777h0c117.254-4.876 234.508-9.752 349-5 114.492 4.752 226.221 19.132 331 18 104.779-1.132 202.606-17.776 314-18 111.394-.224 236.353 15.97 339 18 102.647 2.03 182.982-10.108 309-14 126.018-3.892 297.72.46 365 2 67.28 1.54 30.14.27 33-1%22 fill=%22none%22 stroke=%22%238f94fa%22 stroke-width=%224%22 stroke-linecap=%22round%22%2F%3E%3Cpath d=%22M0 933h0c123.189 13.622 246.378 27.244 348 20 101.622-7.244 181.678-35.355 294-39 112.322-3.645 256.91 17.175 374 29 117.09 11.825 206.684 14.654 305 13s205.354-7.791 336-16 284.899-18.488 346-20c61.101-1.512 29.05 5.744 37 13%22 fill=%22none%22 stroke=%22%23b3b7fb%22 stroke-width=%224%22 stroke-linecap=%22round%22%2F%3E%3Cpath d=%22M0 1088h0c118.228 7.17 236.457 14.339 347 18 110.543 3.661 213.402 3.814 319 4 105.598.186 213.937.403 332-9 118.063-9.403 245.852-28.428 347-35 101.148-6.572 175.655-.693 296 2s286.527 2.198 354 5c67.473 2.802 36.236 8.901 45 15%22 fill=%22none%22 stroke=%22%236c72f8%22 stroke-width=%224%22 stroke-linecap=%22round%22%2F%3E%3Cpath d=%22M0 1244h0c126.701-10.071 253.402-20.143 357-23 103.598-2.857 184.093 1.5 292 11 107.907 9.5 243.226 24.142 368 24 124.774-.142 239.001-15.069 339-22 99.999-6.931 185.769-5.866 312 0s292.923 16.533 355 19c62.077 2.467 19.538-3.267 17-9%22 fill=%22none%22 stroke=%22%23787ef9%22 stroke-width=%224%22 stroke-linecap=%22round%22%2F%3E%3C%2Fsvg%3E");
+}
+.boxpattern {
+  background-color: #e5e5f7;
+  opacity: 0.1;
+  background-image: linear-gradient(#444cf7 0.9px, transparent 0.9px),
+    linear-gradient(to right, #444cf7 0.9px, #e5e5f7 0.9px);
+  background-size: 18px 18px;
+}
+.starpattern {
+  background-color: #e5e5f7;
+  opacity: 0.1;
+  background: radial-gradient(
+      circle,
+      transparent 20%,
+      #e5e5f7 20%,
+      #e5e5f7 80%,
+      transparent 80%,
+      transparent
+    ),
+    radial-gradient(
+        circle,
+        transparent 20%,
+        #e5e5f7 20%,
+        #e5e5f7 80%,
+        transparent 80%,
+        transparent
+      )
+      25px 25px,
+    linear-gradient(#444cf7 2px, transparent 2px) 0 -1px,
+    linear-gradient(90deg, #444cf7 2px, #e5e5f7 2px) -1px 0;
+  background-size: 50px 50px, 50px 50px, 25px 25px, 25px 25px;
+}
+
+.gradientbg {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: repeat;
+  background-image: url("/images/blurry-gradient3.png");
+}
+/* Card */
+
+.container {
+  position: relative;
+  margin: auto;
+  width: 50%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nft {
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  width: 250px;
+  height: 250px;
+  border-radius: 20px;
+}
+img {
+  object-fit: contain;
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 20px;
+}
+.card {
+  margin: auto;
+  position: absolute;
+  border-radius: 35px;
+  width: 300px;
+  height: 500px;
+  background: radial-gradient(
+      93.62% 405.98% at 2.8% 5.47%,
+      rgba(255, 255, 255, 0.1) 0%,
+      rgba(255, 255, 255, 0) 100%
+    ),
+    rgba(47, 52, 83, 0.6);
+  backdrop-filter: blur(20px);
+  background-clip: padding-box;
+  border-top: 1.5px solid #856fa1;
+  border-left: 1.5px solid #856fa1;
+  box-shadow: inset 0 0 50px rgba(175, 175, 175, 0.15),
+    10px 10px 10px rgba(7, 7, 7, 0.05);
+}
+
+.highlight {
+  position: relative;
+}
+
+.highlight::before {
+  /* Highlight color */
+  background-color: #ffc83d;
+
+  content: "";
+  position: absolute;
+  width: calc(100% + 4px);
+  height: 60%;
+  left: -2px;
+  bottom: 0;
+  z-index: -1;
+  transform: rotate(-2deg);
+}
+
+.sketch-highlight {
+  position: relative;
+  padding: 0 10px;
+}
+
+.sketch-highlight:before {
+  content: "";
+  z-index: -1;
+  left: 0em;
+  top: 0em;
+  border-width: 2px;
+  border-style: solid;
+  border-color: darkblue;
+  position: absolute;
+  border-right-color: transparent;
+  width: 100%;
+  height: 1em;
+  transform: rotate(2deg);
+  opacity: 0.5;
+  border-radius: 0.25em;
+}
+
+.sketch-highlight:after {
+  content: "";
+  z-index: -1;
+  left: 0em;
+  top: 0em;
+  border-width: 2px;
+  border-style: solid;
+  border-color: darkblue;
+  border-left-color: transparent;
+  border-top-color: transparent;
+  position: absolute;
+  width: 100%;
+  height: 1em;
+  transform: rotate(-1deg);
+  opacity: 0.5;
+  border-radius: 0.25em;
 }
